@@ -1,4 +1,7 @@
 
+2006-09-04  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* src: gnome_options.c, app_data.c: fix for bug # 1551021
+
 2006-09-01  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* configure.in: fixed remainder of bug # 1109935
 	* src/options.c,src/gnome_ui.c: fixed bug # 1109451
